# MolGrad

./: CMakeLists.txt  README.md
src/backend/cpu/: cpu_elementwise.h
src/backend/cuda/: cuda_elementwise.h
src/core/: device.cpp  device.h  dtype.h  storage.cpp  storage.h  tensor.cpp  tensor.h
src/ops/: elementwise.cpp  elementwise.h
src/shape/: broadcast.cpp  broadcast.h
tests/: main.cpp
tests/main.dSYM/Contents/Resources/DWARF/: main
tests/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
